--- a/configs/site.conf
+++ b/configs/site.conf
@@ -1,7 +1,7 @@
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
-    server_name  _;  # Обслуживает любой хост
+    server_name  _;
 
     root /data;
 
@@ -9,19 +9,16 @@ server {
         proxy_pass http://django:8000;
     }
 
-    location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
-        log_not_found off;
-        expires 90d;
+    location /static/ {
+        autoindex on;
+        alias /data/static/;
     }
 
     location / {
-        try_files $uri @backend;
+        try_files $uri $uri/ @backend;
     }
 
-    error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
+    error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   html;
