--- a/app/config/.env.example
+++ b/app/config/.env.example
@@ -1,9 +1,13 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
-SECRET_KEY=
-DEBUG=
-ALLOWED_HOSTS=127.0.0.1,localhost
-HOST=localhost
-BATCH_SIZE=100
+DB_NAME=movies_database
+DB_PORT=5432
+DB_HOST=postgres.local
+DB_USER=app
+DB_PASSWORD=123qwe
+SECRET_KEY=lkk4s7P4ioQ2GfLuLFsMNdBUzHAKyIvb
+DEBUG=TRUE
+ALLOWED_HOSTS=django
+HOST=django
+BATCH_SIZE=10
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=password
