--- a/configs/site.conf
+++ b/configs/site.conf
@@ -14,8 +14,8 @@ server {
         alias /data/static/;
     }
 
-    location / {
-        try_files $uri $uri/ @backend;
+    location ~ /(admin|api)/(.*) {
+        proxy_pass http://django:8000;
     }
 
     error_page   404              /404.html;
